--- a/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
+++ b/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
@@ -1,7 +1,13 @@
 apiVersion: monitoring.raisingthefloor.org/v1alpha1
 kind: HttpMonitor
 metadata:
-  name: httpmonitor-sample
+  name: check-downloads-page
 spec:
-  # Add fields here
-  foo: bar
+  period: 1m
+  requests:
+    - name: call get
+      target_service: morphicweb
+      method: GET
+      url: "https://app.morphic.org/download"
+      expected_response_codes: [200]
+
