--- a/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
+++ b/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
@@ -5,9 +5,15 @@ metadata:
 spec:
   period: 1m
   requests:
-    - name: call get
+    - name: check external access
       target_service: morphicweb
       method: GET
       url: "https://app.morphic.org/download"
+      expected_response_codes: [200]
+
+    - name: check internal url
+      target_service: morphicweb
+      method: GET
+      url: "http://morphicweb/download"
       expected_response_codes: [200]
 
