--- a/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
+++ b/config/samples/monitoring.raisingthefloor.org_v1alpha1_httpmonitor.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.raisingthefloor.org/v1alpha1
 kind: HttpMonitor
 metadata:
-  name: check-downloads-page
+  name: check-downloads-page-external
 spec:
   period: 1m
   requests:
@@ -10,7 +10,14 @@ spec:
       method: GET
       url: "https://app.morphic.org/download"
       expected_response_codes: [200]
-
+---
+apiVersion: monitoring.raisingthefloor.org/v1alpha1
+kind: HttpMonitor
+metadata:
+  name: check-downloads-page-internal
+spec:
+  period: 1m
+  requests:
     - name: check internal url
       target_service: morphicweb
       method: GET
