--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ trigger:
 variables:
   imageName: 'monitoring-controller'
   ${{ if eq(variables['Build.SourceBranchName'], 'master') }}:
-    newDeployTag: stable-$(Build.BuildNumber)
+    newDeployTag: latest-$(Build.BuildNumber)
     deployRepoRef: master
     imageTags: |
       latest
