- improve documentation - rename HttpMonitor.spec.globals to HttpMonitor.spec.environment

--- a/config/crd/bases/monitoring.raisingthefloor.org_httpmonitors.yaml
+++ b/config/crd/bases/monitoring.raisingthefloor.org_httpmonitors.yaml
@@ -123,7 +123,7 @@ spec:
                 - url
                 type: object
               type: array
-            globals:
+            environment:
               additionalProperties:
                 type: string
               description: Variables available to all requests from the start
