add tilt and fix yaml to work

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,10 +2,10 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/monitoring.raisingthefloor.org.httpmonitors.yaml
+- ./bases/monitoring.raisingthefloor.org_httpmonitors.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patchesStrategicMerge: []
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_httpmonitors.yaml
