--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -25,15 +25,7 @@ spec:
       containers:
       - command:
         - /manager
-        args:
-        - --enable-leader-election
-        image: controller:latest
+        args: []
+        image: localhost:5000/monitoring-controller
         name: manager
-        resources:
-          limits:
-            cpu: 100m
-            memory: 30Mi
-          requests:
-            cpu: 100m
-            memory: 20Mi
       terminationGracePeriodSeconds: 10
